lume/LumeEngine/test/unittest/assets/test_data/image/ktx-test/ktx/invalid/header/size_2d_width_0.ktx
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:3f5efb643a378903ad87b77dec440862e992cc0d1777f079e6cefecc5ba584b0
size 84
